--- a/mybugtrackproject/buildspec.yml
+++ b/mybugtrackproject/buildspec.yml
@@ -13,7 +13,7 @@ phases:
  
   build:
     commands:
-      - echo "Build Phase - Starting"
+      - echo "Build Phase - Starting........."
       - echo Build started on `date`
       - python manage.py migrate
      # - echo "Running Pylint"
